<resources>
    <string name="app_name">SplitShare</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="terms"><u>Terms</u></string>
    <string name="contact_us"><u>Contact Us</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="welcome_back">Welcome Back to SplitShare!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="by_signing_up_you_accept_the_app_terms_of_services"><u>By signing up, you accept the SplitShare Terms \n<u>and Services</u> </u></string>
    <string name="your_email_address">Your Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone </string>
    <string name="done">Done</string>
    <string name="your_password">Your password</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_name">Please Enter Full Name</string>
    <string name="enter_email_valid">Please Enter Valid Email</string>
    <string name="please_enter_password">Please Enter Your Password</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <string name="add_expense">Add Expense</string>
    <string name="you_are_all_settled_up">You are all settled up</string>
    <string name="no_group_to_show">No Group to Show</string>
    <string name="add_more_friends">Add more friends</string>
    <string name="start_a_new_group">Start a new group</string>
    <string name="scan">Scan</string>
    <string name="email_settings">Email Settings</string>
    <string name="device_and_push_notification_settings">Device and push notification \n settings</string>
    <string name="preferences">Preferences</string>
    <string name="log_out">Log out</string>
    <string name="user_name">User Name</string>
    <string name="username_gmail_com">username@email.com</string>
    <string name="passcode">Passcode</string>
    <string name="feedback">FeedBack</string>
    <string name="group_name">Group Name</string>
    <string name="no_expenses">no expenses</string>
    <string name="all_groups">All groups</string>
    <string name="outstanding_balances">Outstanding balances</string>
    <string name="groups_you_owe">Groups you owe</string>
    <string name="groups_that_owe_you">Groups that owe you</string>
    <string name="create_a_group">Create a Group</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="type">Type</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please Wait</string>
</resources>