<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    android:padding="8dp"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_up"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/btn_sign_in_google"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/button_text_size" />


</RelativeLayout>